# Dev-Standup

./: .gitignore  LICENSE  LINKEDIN_POST.md  OLLAMA_SETUP.md  README.md  install_ollama.py  pyproject.toml  requirements.txt  run.py
dev_standup/: __init__.py  cli.py  config.py  git_scanner.py  github_utils.py  prompts.py  summarizer.py
